tests/core/error/cast-2.rq
SELECT ("asdf"^^xsd:date AS ?b) { }
